# homesteader

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  db.rs  main.rs  mqtt.rs
backend/src/api/: weather.rs
backend/src/api/weather/: models.rs
backend/src/db/: sensors.rs  users.rs
devices/: Dockerfile  requirements.txt  run_all.sh
devices/devices/: actuator.py  sensor.py
frontend/: .dockerignore  Dockerfile  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css
frontend/src/lib/: utils.ts
frontend/src/lib/backend/: backend.svelte.ts  fetched.svelte.ts  sensors.svelte.ts  weather.svelte.ts
frontend/src/lib/components/: Sidebar.svelte  ThemeButton.svelte
frontend/src/lib/components/deviceButton/: DeviceButton.svelte
frontend/src/lib/components/devices/: BooleanActuatorCard.svelte  SensorCard.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/models/: alerts.svelte.ts  user.svelte.ts
frontend/src/lib/views/layout/: Header.svelte  Seo.svelte  Sidebar.svelte
frontend/src/lib/views/overview/: OverviewView.svelte
frontend/src/lib/views/sensors/: SensorsView.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/database/: +page.svelte
frontend/src/routes/gateway/: +page.svelte
frontend/src/routes/sensors/: +page.svelte
frontend/src/routes/settings/: +page.svelte
mosquitto/: mosquitto-startup.sh
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
sensors/: Dockerfile  sensor.py
(+7 files in other folders)
