[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
paho-mqtt = "0.12"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json"]}
openssl = { version = "0.10", features = ["vendored"] }